2017-09-26 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.3.1
Crash #58: Base - Work around the INPUT_SERVER PHP bug (Lonnie Blansett)
Minor Bug #59: Admin - Fix pretty URLs for some modules (Lonnie Blansett)

2017-09-25 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.3.0
Change #35: - Change tables to divs except for tabular data display (Lonnie Blansett)
Change #42: Base - Remove all references of global variable (Lonnie Blansett)
Feature #51: Admin - Update admin to use pretty URLs (Lonnie Blansett)

2017-09-05 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.2.0
Change #40: Software System - Display all open releases on the change log (Lonnie Blansett)
Change #33: Ticket System - When editing a software ticket only display valid releases in the list (Lonnie Blansett)
Feature #30: Software System - Add "New Release" link to the Road Map (Lonnie Blansett)

2017-09-05 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.1.1
Change #29: Software System - Always display "Unversioned Tickets" section on Road Map (Lonnie Blansett)
Major Bug #37: Admin - "Search" tabs not working for any module (Lonnie Blansett)

2017-08-31 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.1.0
Feature #20: Software System - Add ability to add tickets from the roadmap (Lonnie Blansett)
Feature #21: Ticket System - Link ticket fields with thier respective representations in the admin (Lonnie Blansett)
Feature #23: Software System - Display List of Unversioned Tickets on Roadmap (Lonnie Blansett)
Feature #22: User - Add a User tab for tickets (Lonnie Blansett)

2017-08-27 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.0.2
Minor Bug #10: Ticket System - Successful ticket creation doesn't display the "Subject" of the ticket (Lonnie Blansett)
Minor Bug #25: Admin - Items are not being deleted (Lonnie Blansett)
Minor Bug #19: Ticket System - Subjects with quotes get mangled on edit (Lonnie Blansett)

2017-08-27 Lonnie Blansett <lonnie@omniverserpg.com>