@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Omniverse Admin</title>
-  <link rel="stylesheet" type="text/css" href="{{controller.getDir('WebShare')}}/admin.css" />
+  <link rel="stylesheet" type="text/css" href="{{controller.domain.uri}}/{{controller.getDir('share')}}/admin.css" />
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
