@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Omniverse Admin</title>
-<link rel="stylesheet" tyep="text/css" href="{{controller.getDir('WebShare')}}/admin.css">
+<link rel="stylesheet" tyep="text/css" href="{{controller.domain.uri}}/{{controller.getDir('share')}}/admin.css">
 </head>
 <body>
 <div class="popup">
