@@ -1,7 +1,8 @@
-2017-09-26 Lonnie Blansett <lonnie@omniverserpg.com>
+2017-09-28 Lonnie Blansett <lonnie@omniverserpg.com>
 Omniverse 1.3.1
 Crash #58: Base - Work around the INPUT_SERVER PHP bug (Lonnie Blansett)
 Minor Bug #59: Admin - Fix pretty URLs for some modules (Lonnie Blansett)
+Major Bug #60: Base - Fix domain pathing (Lonnie Blansett)
 
 2017-09-25 Lonnie Blansett <lonnie@omniverserpg.com>
 Omniverse 1.3.0
